--- a/src/posts/ETEC-assignment.mdx
+++ b/src/posts/ETEC-assignment.mdx
@@ -1,8 +1,8 @@
 ---
-title: "Assignment 1: Analysis and Comparison of Rationales for E-Learning"
+title: "Assignment 1 - Analysis and Comparison of Rationales for E-Learning"
 date: "2019-06-02"
-quickdetail: Prepared for ETEC 520, Dr. Mark Bullen
-course: ETEC 510
+quickdetail: "Prepared for ETEC 520, Dr. Mark Bullen"
+course: "ETEC 510"
 ---
 
 ## Queen’s University
