--- a/src/projects/ETEC512-learning-concept-map.mdx
+++ b/src/projects/ETEC512-learning-concept-map.mdx
@@ -1,14 +1,27 @@
 ---
 title: "A concept map of learning theories"
 date: "2021-02-11"
-quickdetail: "A concept map developed for COURSE"
+quickdetail: "A concept map developed for ETEC 512"
 ---
 
-# Reflection
+## Reflection
+- point 1
+- point 2
+- point 3
 
-Here is a reflection.
-Cool. 
+## Artifact
+This concept map was developed to demonstrate understanding of the history and context of important learning theories. This was one of (many) concept maps I developed throughout the MET program. 
 
-# The Concept Map
-<div style="width: 960px; height: 720px; margin: 10px; position: relative;"><iframe allowfullscreen frameborder="0" style="width:960px; height:720px" src="https://lucid.app/documents/embeddedchart/5cbf4c24-0cac-4c11-acba-bb4c5a0baa9e" id="Q.OpdackJDJZ"></iframe></div>
+<div style="width: 960px; height: 720px; margin: 10px; position: relative;">
+    <iframe allowfullscreen 
+    frameborder="0" 
+    style="width:960px; height:720px" 
+    src="https://lucid.app/documents/embeddedchart/5cbf4c24-0cac-4c11-acba-bb4c5a0baa9e" id="Q.OpdackJDJZ">
+    </iframe>
+    </div>
 
+## Concept Mapping 
+**To be written**
+- history
+- relationship to learning theories
+- usefulness 
