--- a/src/projects/ETEC520-rationales-for-elearning.mdx
+++ b/src/projects/ETEC520-rationales-for-elearning.mdx
@@ -7,13 +7,12 @@ course: "ETEC 520"
 
 > Goal: to review and create a powerpoint presentation version
 
-<div class="border-solid border-4 border-black"> 
-<iframe
-src="https://docs.google.com/document/d/e/2PACX-1vR16tDV6T63lNrhw_-71jZtVB-RgfDJDygt8jY1fLt8_78Hbrd9FpGZvjjVYztvBg/pub?embedded=true"></iframe>
-</div>
+import PDFViewer from '../components/pdf-viewer';
+import PDFJSBackend from '../backends/pdfjs';
 
-<div class="border-solid border-4 border-black"> 
-<iframe src="https://docs.google.com/document/d/e/2PACX-1vRHePyEQu57inJzdvaPAI6unH5vfIvPWmtJmrUFnFXqhbQTdsP3e5TLQZZxK2STj5Hce0k4TBjn07k-/pub?embedded=true"></iframe>
+<div class="pdf-container"> 
+<PDFViewer backend={PDFJSBackend} src="/pdf.pdf"
+/>
 </div>
 
 ## Reflection
