edit sto artifacts

--- a/src/projects/ETEC-neuroscience-conference.mdx
+++ b/src/projects/ETEC-neuroscience-conference.mdx
@@ -5,8 +5,12 @@ quickdetail: "A course developed in Rise Articulate about neuroscience and learn
 course: ""
 ---
 
+We investigated learning from a neuroscience perspective and developed a short introductory course to share with our peers. In this course we introduce information about how the brain "works" for key processes related to learning: memory, attention, motivation, and language.
+
+We included "neuromyths" throughout this course. Neuromyths are commonly held beliefs about how the brain works, even when there is no scientific evidence to support these beliefs. Or worse, when there is scientific evidence to the opposite of the myth.      
+
+<a href="https://rise.articulate.com/share/kAPXNTL2603967LvhLp7PRUNXFe7UJm3#/" target="_blank">Rise Course Link</a>
 <iframe style="width: 960px; height: 720px; margin: 10px; position: relative;" 
 src="https://rise.articulate.com/share/kAPXNTL2603967LvhLp7PRUNXFe7UJm3#/">
 </iframe>
 
-      
