--- a/src/projects/ETEC512-learning-concept-map.mdx
+++ b/src/projects/ETEC512-learning-concept-map.mdx
@@ -4,13 +4,7 @@ date: "2021-02-11"
 quickdetail: "A concept map developed for ETEC 512"
 ---
 
-## Reflection
-- point 1
-- point 2
-- point 3
-
-## Artifact
-This concept map was developed to demonstrate understanding of the history and context of important learning theories. This was one of (many) concept maps I developed throughout the MET program. 
+This concept map was developed to demonstrate understanding of the history and context of important learning theories. This was one of (many) concept maps I developed throughout the MET program. I have come back to this concept map at various points to review my understanding, as I learn new concepts. 
 
 <div style="width: 960px; height: 720px; margin: 10px; position: relative;">
     <iframe allowfullscreen 
@@ -22,6 +16,7 @@ This concept map was developed to demonstrate understanding of the history and c
 
 ## Concept Mapping 
 **To be written**
+> I want to discuss the benefits of of concept mapping generally here
 - history
 - relationship to learning theories
 - usefulness 
