update content works

--- a/src/projects/ETEC-neuroscience-conference.mdx
+++ b/src/projects/ETEC-neuroscience-conference.mdx
@@ -5,12 +5,27 @@ quickdetail: "A course developed in Rise Articulate about neuroscience and learn
 course: ""
 ---
 
-We investigated learning from a neuroscience perspective and developed a short introductory course to share with our peers. In this course we introduce information about how the brain "works" for key processes related to learning: memory, attention, motivation, and language.
+import brainanatomy from './brain-anatomy-rise0.png'
 
-We included "neuromyths" throughout this course. Neuromyths are commonly held beliefs about how the brain works, even when there is no scientific evidence to support these beliefs. Or worse, when there is scientific evidence to the opposite of the myth.      
+# Artifact + Description
 
-<a href="https://rise.articulate.com/share/kAPXNTL2603967LvhLp7PRUNXFe7UJm3#/" target="_blank">Rise Course Link</a>
-<iframe style="width: 960px; height: 720px; margin: 10px; position: relative;" 
-src="https://rise.articulate.com/share/kAPXNTL2603967LvhLp7PRUNXFe7UJm3#/">
-</iframe>
+We investigated learning from a neuroscience perspective and developed a short introductory course to share with our peers. In this course we introduce information about how the brain "works" for key processes related to learning: memory, attention, motivation, and language.    
 
+
+<a href="https://rise.articulate.com/share/kAPXNTL2603967LvhLp7PRUNXFe7UJm3#/" 
+target="_blank">View our course here: Rise Course Link</a>
+
+<div>
+<img src={brainanatomy}></img>
+</div>
+
+# Reflection
+
+ Course discussion often centered around what level of expertise in the many areas of learning were required by educators. Do educators need to be experts in neuroscience?, for example. The general concensus was that expertise is not required, but the ability to evaluate information is. We included "neuromyths" throughout our neuroscience course. Neuromyths are commonly held beliefs about how the brain works, even when there is no scientific evidence to support these beliefs. Or worse, when there is scientific evidence to the opposite of the myth. The challenge for educators is that neuromyths are pervasive online - from personal blogs, to educational vendor solutions. While it is not necessary for educators to be experts in neuroscience, they need to have the skills to identify neuromyths when they see them. 
+
+# Connections
+
+- technology: Rise (comparison with other content development platforms - i.e. Moodle, Canvas, etc.)
+- learning theories -> concept map from 512
+- evaluating information / educational research -> ETEC 500
+- "vendor solutions"
