--- a/src/projects/ETEC512-learning-concept-map.mdx
+++ b/src/projects/ETEC512-learning-concept-map.mdx
@@ -4,6 +4,7 @@ date: "2021-02-11"
 quickdetail: "A concept map developed for ETEC 512"
 ---
 
+# Artifact + Description
 This concept map was developed to demonstrate understanding of the history and context of important learning theories. This was one of (many) concept maps I developed throughout the MET program. I have come back to this concept map at various points to review my understanding, as I learn new concepts. 
 
 <div style="width: 960px; height: 720px; margin: 10px; position: relative;">
@@ -14,9 +15,18 @@ This concept map was developed to demonstrate understanding of the history and c
     </iframe>
     </div>
 
+# Reflection
+
+
+# Connections
+
+---
 ## Concept Mapping 
+
 **To be written**
+
 > I want to discuss the benefits of of concept mapping generally here
+
 - history
 - relationship to learning theories
 - usefulness 
