--- a/src/projects/ETEC520-rationales-for-elearning.mdx
+++ b/src/projects/ETEC520-rationales-for-elearning.mdx
@@ -3,22 +3,31 @@ title: "Rationales for e-learning"
 date: "2019-06-02"
 quickdetail: "A paper written for ETEC 520 where we were tasked with comparing institutional rationales for e-learning."
 course: "ETEC 520"
-embeddedImagesLocal: 
-    - etec520_ubc_elearning.png
 ---
 
 import i from './etec520_ubc_elearning.png'
-import o from '../pdfs/ETEC520_1_.pdf'
+import ETEC520_1_ from '../pdfs/ETEC520_1_.pdf'
 
-In ETEC 520 we had a series of assignments that asked us to evaluate institutional approaches, preparedness for, and implementation of **e-learning**. This was one of the first courses that introduced concepts about educational technology at an institutional level. In the creation of these artifacts, it became apparent that **institutional culture** is a hard-to-define yet important consideration when considering educational technology at scale. 
+# Artifact + Description
 
-<div class="pdf-container">
-<img src={i} />
+In ETEC 520 we had a series of assignments that asked us to evaluate institutional approaches, preparedness for, and implementation of **e-learning**. This was one of the first courses that introduced concepts about educational technology at an institutional level. 
+
+<div>
+<img src={ETEC520_1_} />
 </div>
 
 ## Full paper
 <object data = {o} height="700px" width="900px"/>
 
 <br></br>
+
+# Reflection
+
+In the creation of these artifacts, it became apparent that **institutional culture** is a hard-to-define yet important consideration when considering educational technology at scale. 
+
+# Connections
+
+- institutional culture (ETEC 524 - LMS choices)
+
 
 > Improvements: create slide deck to summarize paper
