--- a/src/projects/ETEC520-rationales-for-elearning.mdx
+++ b/src/projects/ETEC520-rationales-for-elearning.mdx
@@ -6,20 +6,23 @@ course: "ETEC 520"
 ---
 
 import i from './etec520_ubc_elearning.png'
-import ETEC520_1_ from '../pdfs/ETEC520_1_.pdf'
+import elearning from '../pdfs/ETEC520_1_.pdf'
 
 # Artifact + Description
 
 In ETEC 520 we had a series of assignments that asked us to evaluate institutional approaches, preparedness for, and implementation of **e-learning**. This was one of the first courses that introduced concepts about educational technology at an institutional level. 
 
 <div>
-<img src={ETEC520_1_} />
+<img src={elearning} />
 </div>
 
 ## Full paper
-<object data = {o} height="700px" width="900px"/>
+<a href="https://docs.google.com/document/d/e/2PACX-1vR16tDV6T63lNrhw_-71jZtVB-RgfDJDygt8jY1fLt8_78Hbrd9FpGZvjjVYztvBg/pub" 
+target="_blank">Google Drive version of paper</a>
 
-<br></br>
+<div>
+<object data = {o} height="700px" width="900px"/>
+</div>
 
 # Reflection
 
