--- a/src/projects/ETEC520-rationales-for-elearning.mdx
+++ b/src/projects/ETEC520-rationales-for-elearning.mdx
@@ -5,8 +5,8 @@ quickdetail: "A paper written for ETEC 520 where we were tasked with comparing i
 course: "ETEC 520"
 ---
 
-import i from './etec520_ubc_elearning.png'
-import elearning from '../pdfs/ETEC520_1_.pdf'
+import elearning from './etec520_ubc_elearning.png'
+import o from '../pdfs/ETEC520_1_.pdf'
 
 # Artifact + Description
 
@@ -17,6 +17,7 @@ In ETEC 520 we had a series of assignments that asked us to evaluate institution
 </div>
 
 ## Full paper
+
 <a href="https://docs.google.com/document/d/e/2PACX-1vR16tDV6T63lNrhw_-71jZtVB-RgfDJDygt8jY1fLt8_78Hbrd9FpGZvjjVYztvBg/pub" 
 target="_blank">Google Drive version of paper</a>
 
