add goals to artifacts

--- a/src/projects/ETEC520-rationales-for-elearning.mdx
+++ b/src/projects/ETEC520-rationales-for-elearning.mdx
@@ -3,12 +3,12 @@ title: "Rationales for e-learning"
 date: "2019-06-02"
 quickdetail: "A paper written for ETEC 520 where we were tasked with comparing institutional rationales for e-learning."
 course: "ETEC 520"
+goals: ["1"]
 ---
 
 import elearning from './etec520_ubc_elearning.png'
 import o from '../pdfs/ETEC520_1_.pdf'
 
-# Artifact + Description
 
 In ETEC 520 we had a series of assignments that asked us to evaluate institutional approaches, preparedness for, and implementation of **e-learning**. This was one of the first courses that introduced concepts about educational technology at an institutional level. 
 
