--- a/src/projects/ETEC-neuroscience-conference.mdx
+++ b/src/projects/ETEC-neuroscience-conference.mdx
@@ -3,11 +3,10 @@ title: "Neuroscience and learning introductory course"
 date: "2019-06-02"
 quickdetail: "A course developed in Rise Articulate about neuroscience and learning"
 course: ""
+goals: ["1", "3"]
 ---
 
 import brainanatomy from './brain-anatomy-rise0.png'
-
-# Artifact + Description
 
 We investigated learning from a neuroscience perspective and developed a short introductory course to share with our peers. In this course we introduce information about how the brain "works" for key processes related to learning: memory, attention, motivation, and language.    
 
