--- a/src/projects/ETEC512-learning-concept-map.mdx
+++ b/src/projects/ETEC512-learning-concept-map.mdx
@@ -2,9 +2,9 @@
 title: "A concept map of learning theories"
 date: "2021-02-11"
 quickdetail: "A concept map developed for ETEC 512"
+goals: ["1"]
 ---
 
-# Artifact + Description
 This concept map was developed to demonstrate understanding of the history and context of important learning theories. This was one of (many) concept maps I developed throughout the MET program. I have come back to this concept map at various points to review my understanding, as I learn new concepts. 
 
 <div style="width: 960px; height: 720px; margin: 10px; position: relative;">
