--- a/src/projects/ETEC520-rationales-for-elearning.mdx
+++ b/src/projects/ETEC520-rationales-for-elearning.mdx
@@ -7,6 +7,7 @@ goals: ["1"]
 ---
 
 import elearning from './etec520_ubc_elearning.png'
+import elearningpaper from '../pdfs/ETEC520_1_.pdf'
 
 In ETEC 520 we had a series of assignments that asked us to evaluate institutional approaches, preparedness for, and implementation of **e-learning**. This was one of the first courses that introduced concepts about educational technology at an institutional level. 
 
@@ -19,6 +20,9 @@ In ETEC 520 we had a series of assignments that asked us to evaluate institution
 <a href="https://docs.google.com/document/d/e/2PACX-1vR16tDV6T63lNrhw_-71jZtVB-RgfDJDygt8jY1fLt8_78Hbrd9FpGZvjjVYztvBg/pub" 
 target="_blank">Google Drive version of paper</a>
 
+<div>
+<object data = {elearningpaper} height="700px" width="900px"/>
+</div>
 
 # Reflection
 
