--- a/src/projects/ETEC512-learning-concept-map.mdx
+++ b/src/projects/ETEC512-learning-concept-map.mdx
@@ -1,7 +1,8 @@
 ---
 title: "A concept map of learning theories"
-date: "2021-02-11"
+date: "2019-09-01"
 quickdetail: "A concept map developed for ETEC 512"
+course: "ETEC 512"
 goals: ["1"]
 ---
 
