--- a/src/projects/ETEC512-neuroscience-conference.mdx
+++ b/src/projects/ETEC512-neuroscience-conference.mdx
@@ -1,10 +1,12 @@
 ---
 title: "Neuroscience and learning introductory course"
-date: "2019-06-02"
+date: "2019-10-01"
 quickdetail: "A course developed in Rise Articulate about neuroscience and learning"
-course: ""
+course: "ETEC 512"
 goals: ["1", "3"]
 ---
+
+ETEC 512 involved the investigation of different learning theories. One approach to learning is a neuroscientific approach. 
 
 import brainanatomy from './brain-anatomy-rise0.png'
 
