--- a/src/projects/ETEC543-learning-analytics-dashboard.mdx
+++ b/src/projects/ETEC543-learning-analytics-dashboard.mdx
@@ -1,10 +1,10 @@
 ---
 title: "A learning analytics dashboard"
-date: "2021-01-01"
+date: "2019-11-01"
 quickdetail: "A sample learning analytics dashboard designed to be adapted for different learning designs."
+course: "ETEC 543"
 goals: ["1", "3"]
 ---
-
 
 This dashboard was developed for ETEC 543 as my "Learning Analytics Adventure". This was one of two Tableau projects developed over the course of my MET experience. The prototype was an important stepping stone for the development of a dashboard template for my self-directed ETEC 590 project.
 
