--- a/src/projects/ETEC512-1.mdx
+++ b/src/projects/ETEC512-1.mdx
@@ -20,6 +20,7 @@ This concept map was developed to demonstrate understanding of the history and c
 
 
 # Connections
+- learning theories
 
 ---
 ## Concept Mapping 
