add second blog post

--- a/src/projects/building-this-porfolio.mdx
+++ b/src/projects/building-this-porfolio.mdx
@@ -1,5 +1,5 @@
 ---
-title: "My ePortfolio"
+title: "Starting to build an ePortfolio"
 date: "2021-11-17"
 quickdetail: "This website ... "
 course: "ETEC 590"
