images and future

--- a/src/projects/building-this-porfolio.mdx
+++ b/src/projects/building-this-porfolio.mdx
@@ -7,7 +7,8 @@ goals: ["4"]
 ---
 
 import goalexampleicons from './goalexampleicons.png'
-import ETEC590deveexample from './ETEC590deveexample.png'
+import ETEC590deveexample from './ETEC590devexample.png'
+import goalhover from './goalhover.png'
 
 A blog within a blog! I thought it would be interesting to document the actual development of the **backend** of the ePortfolio. I've included here some notes and reflection on the process.
 
@@ -19,7 +20,7 @@ The review of previous generations of ePortfolios highlighted a few important th
 > - it is easy to create a portfolio of work that is simply artifacts, but much more difficult to make connections between those artifacts and learning
 > - free website tools all start to look the same, and may not work well for a portfolio that is meant to be continually developed 
 
-I set myself the challenge of building this website in order to (at least attempt to) tackle those three problems. The output of this project is the website you are looking at now, but the cool development so far has been how to get from input (artifacts, goals, reflection) to that output. I wanted to reduce the amount of navigation necessary, and instead build in connections between content using icons and some databases. On my homepage, and projects page you can start to see this come to be. 
+I set myself the challenge of building a tool that would create this website in order to (at least attempt to) tackle those three problems. The output of this project is the website you are looking at now, but the cool development so far has been how to get from input (artifacts, goals, reflection) to that output. I wanted to reduce the amount of navigation necessary, and instead build in connections between content using icons and some databases. On my homepage, and projects page you can start to see this come to be. 
 
 <div class="p-8">
     <img src={goalexampleicons}/>
@@ -32,3 +33,24 @@ To actually populate the portfolio with artifacts (like this one!) I need to wri
 </div>
 
 My hope is that the development time that has gone into phase 1 is going to pay off in the next steps, where I actually start populating artifact content! 
+
+
+# Phase 2: Break a Portfolio Tool
+## 2021-11-30
+
+
+<span> 
+<div className="small-container" style={{float: "left"}}>
+    <img height="400px" width="400px" src={goalhover}/> 
+</div>
+</span>
+
+
+
+
+
+
+# Phase 3: Bend a Portfolio Tool
+## 2021-12-10
+
+I identified three challenges that I wanted to address with the development of this portfolio: navigation, disjointed artifacts, and customization. I also felt it was important to build something that wouldn't end up as a static and unchanging portfolio. Ultimately, I think I was able to design a tool to help me solve these problems. 
