remove customization blogpost

--- a/src/projects/future-directions.mdx
+++ b/src/projects/future-directions.mdx
@@ -1,8 +1,7 @@
 ---
-title: "Future Directions"
+title: "Future Directions: Version Control"
 date: "2021-12-13"
-quickdetail: "Where to go now?"
-course: "ETEC 590"
+quickdetail: "version_this_is_final_2222.docx"
 goals: ["4"]
 ---
 
@@ -23,19 +22,42 @@ GitHub and git are tools I have been using for data projects and programming for
 
 <span> 
     <div>
-        <img height="400px" width="500px" src={branches}/> 
+        <img class="px-8" width="100%" src={branches}/> 
     </div>
 </span>
 
+### Version A
+In this version each project only contained a description and goal icon. When selected, a page was created which contained the project information. 
 
-<span> 
-    <div style={{float: "left"}}>
-        <img height="400px" width="500px" src={modalv1a}/> 
+<div class="grid grid-cols-2 gap-2">
+    <div>
+        <img src={modalv1a}/> 
     </div>
-</span>
+    <div>
+        <img src={modalv1b}/> 
+    </div>
+</div>
 
-<span> 
-    <div style={{float: "right"}}>
-        <img height="400px" width="500px" src={modalv1b}/> 
+### Version B
+In this version I updated the project details, included a picture as well as a link to the project. When selecting a project, a new window or "modal" was created. This showed a larger version of the image and the description / reflection as a left and right scroll menu.
+
+<div class="grid grid-cols-2 gap-2">
+    <div>
+        <img height="600px" width="600px" src={modalv2a}/> 
     </div>
-</span>
+    <div>
+        <img src={modalv2b}/> 
+    </div>
+</div>
+
+### Version C
+In the most recent version, I added highlights of <span class="tag-text">key words</span> to each project. I also created a hover effect (not shown) for each goal. In the modal window I simplified the view to be a downward scroll with a smaller image. I also embedded iframes for content that was available on the web.
+
+<div class="grid grid-cols-2 gap-2">
+    <div>
+        <img height="600px" width="600px" src={modalv3a}/> 
+    </div>
+    <div>
+        <img src={modalv3b}/> 
+    </div>
+</div>
