--- a/src/projects/future-directions.mdx
+++ b/src/projects/future-directions.mdx
@@ -13,11 +13,6 @@ import modalv2b from './modalv2b.png'
 import modalv3b from './modalv3b.png'
 import branches from './branches.png'
 
-
-## Starting Again
-
-## Version Control
-
 GitHub and git are tools I have been using for data projects and programming for some time. They are tools that allow documented version control. I can create "branches" for experimenting, make changes on the website in that "branch" - and either abandon or accept those changes depending on whether they work. GitHub allows projects to be made open source and shared with other developers. While this infrastructure was developed for programming - I have found it to be an interesting experience completing "coursework" using this framework. I have every stage of development of this project documented, which makes it easy to look back and reflect upon the work. 
 
 <span> 
@@ -29,7 +24,7 @@ GitHub and git are tools I have been using for data projects and programming for
 ### Version A
 In this version each project only contained a description and goal icon. When selected, a page was created which contained the project information. 
 
-<div class="grid grid-cols-2 gap-2">
+<div class="grid grid-cols-2">
     <div>
         <img src={modalv1a}/> 
     </div>
@@ -41,9 +36,9 @@ In this version each project only contained a description and goal icon. When se
 ### Version B
 In this version I updated the project details, included a picture as well as a link to the project. When selecting a project, a new window or "modal" was created. This showed a larger version of the image and the description / reflection as a left and right scroll menu.
 
-<div class="grid grid-cols-2 gap-2">
+<div class="grid grid-cols-2">
     <div>
-        <img height="600px" width="600px" src={modalv2a}/> 
+        <img height="400px" width="400px" src={modalv2a}/> 
     </div>
     <div>
         <img src={modalv2b}/> 
@@ -53,9 +48,9 @@ In this version I updated the project details, included a picture as well as a l
 ### Version C
 In the most recent version, I added highlights of <span class="tag-text">key words</span> to each project. I also created a hover effect (not shown) for each goal. In the modal window I simplified the view to be a downward scroll with a smaller image. I also embedded iframes for content that was available on the web.
 
-<div class="grid grid-cols-2 gap-2">
+<div class="grid grid-cols-2">
     <div>
-        <img height="600px" width="600px" src={modalv3a}/> 
+        <img height="400px" width="400px" src={modalv3a}/> 
     </div>
     <div>
         <img src={modalv3b}/> 
