--- a/src/projects/building-this-porfolio.mdx
+++ b/src/projects/building-this-porfolio.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Starting to build an ePortfolio"
+title: "The Three 'B's of Web Dev: Build, Break, Bend"
 date: "2021-11-17"
 quickdetail: "This website ... "
 course: "ETEC 590"
@@ -9,8 +9,6 @@ goals: ["4"]
 import goalexampleicons from './goalexampleicons.png'
 import ETEC590deveexample from './ETEC590devexample.png'
 import goalhover from './goalhover.png'
-
-A blog within a blog! I thought it would be interesting to document the actual development of the **backend** of the ePortfolio. I've included here some notes and reflection on the process.
 
 # Phase 1: Build a Portfolio Tool 
 ## 2021-11-08
