--- a/src/projects/future-directions.mdx
+++ b/src/projects/future-directions.mdx
@@ -46,7 +46,7 @@ In this version I updated the project details, included a picture as well as a l
 </div>
 
 ### Version C
-In the most recent version, I added highlights of <span class="tag-text">key words</span> to each project. I also created a hover effect (not shown) for each goal. In the modal window I simplified the view to be a downward scroll with a smaller image. I also embedded iframes for content that was available on the web.
+In the most recent version I added highlights of <span class="tag-text">key words</span> to each project. I also created a hover effect (not shown) for each goal. In the modal window I simplified the view to be a downward scroll with a smaller image. I also embedded iframes for content that was available on the web.
 
 <div class="grid grid-cols-2">
     <div>
