--- a/src/projects/building-this-porfolio.mdx
+++ b/src/projects/building-this-porfolio.mdx
@@ -9,13 +9,18 @@ goals: ["4"]
 import goalexampleicons from './goalexampleicons.png'
 import goalhover from './goalhover.png'
 
-# Phase 1: Build a Portfolio Tool 
+# Phase 1: Build It
 ## 2021-11-08
 
 The review of previous generations of ePortfolios highlighted a few important things: 
-> - too much content is hard to navigate, 
-> - it is easy to create a portfolio of work that is simply artifacts, but much more difficult to make connections between those artifacts and learning
-> - free website tools all start to look the same, and may not work well for a portfolio that is meant to be continually developed 
+
+<blockquote>
+<ul class='my-style'>
+    <li>too much content is hard to navigate </li> 
+    <li>it is easy to create a portfolio of work that is simply artifacts, but much more difficult to make connections between those artifacts and learning</li>
+    <li>free website tools all start to look the same, and may not work well for a portfolio that is meant to be continually developed</li>
+</ul>
+</blockquote>
 
 I set myself the challenge of building a tool that would create this website in order to (at least attempt to) tackle those three problems. The output of this project is the website you are looking at now, but the cool development so far has been how to get from input (artifacts, goals, reflection) to that output. I wanted to reduce the amount of navigation necessary, and instead build in connections between content using icons and some databases. On my homepage, and projects page you can start to see this come to be. 
 
@@ -28,7 +33,7 @@ To actually populate the portfolio with artifacts (like this one!) I need to wri
 My hope is that the development time that has gone into phase 1 is going to pay off in the next steps, where I actually start populating artifact content! 
 
 
-# Phase 2: Break a Portfolio Tool
+# Phase 2: Break It
 ## 2021-11-30
 
 
@@ -43,7 +48,15 @@ My hope is that the development time that has gone into phase 1 is going to pay 
 
 
 
-# Phase 3: Bend a Portfolio Tool
+# Phase 3: Bend It
 ## 2021-12-10
 
 I identified three challenges that I wanted to address with the development of this portfolio: navigation, disjointed artifacts, and customization. I also felt it was important to build something that wouldn't end up as a static and unchanging portfolio. Ultimately, I think I was able to design a tool to help me solve these problems. 
+
+<blockquote>
+<ul class='my-style'>
+    <li>I have designed the portfolio to be interactive without too much navigation. Aside from artifacts that cannot be embedded, most content does not require leaving the site.</li> 
+    <li>The data backend I developed requires a description, reflection, and connection. While there is always room for improvement - I believe the artifacts are well connected to my goals and intentions.</li>
+    <li>free website tools all start to look the same, and may not work well for a portfolio that is meant to be continually developed</li>
+</ul>
+</blockquote>
