--- a/src/projects/building-this-porfolio.mdx
+++ b/src/projects/building-this-porfolio.mdx
@@ -16,7 +16,7 @@ import goalhover from './goalhover.png'
 The review of previous generations of ePortfolios highlighted a few important things: 
 
 <blockquote>
-<ul class='my-style'>
+<ul class='arrow-list-style'>
     <li>too much content is hard to navigate </li> 
     <li>it is easy to create a portfolio of work that is simply artifacts, but much more difficult to make connections between those artifacts and learning</li>
     <li>free website tools all start to look the same, and may not work well for a portfolio that is meant to be continually developed</li>
@@ -59,7 +59,7 @@ My hope is that the development time that has gone into phase 1 is going to pay 
 I identified three challenges that I wanted to address with the development of this portfolio: navigation, disjointed artifacts, and customization. I also felt it was important to build something that wouldn't end up as a static and unchanging portfolio. Ultimately, I think I was able to design a tool to help me solve these problems. 
 
 <blockquote>
-<ul class='my-style'>
+<ul class='arrow-list-style'>
     <li>I have designed the portfolio to be interactive without too much navigation. Aside from artifacts that cannot be embedded, most content does not require leaving the site.</li> 
     <li>The data backend I developed requires a description, reflection, and connection. While there is always room for improvement - I believe the artifacts are well connected to my goals and intentions.</li>
     <li>free website tools all start to look the same, and may not work well for a portfolio that is meant to be continually developed</li>
