--- a/src/projects/version-control.mdx
+++ b/src/projects/version-control.mdx
@@ -24,9 +24,9 @@ GitHub and git are tools I have been using for data projects and programming for
 ### Version A
 In this version each project only contained a description and goal icon. When selected, a page was created which contained the project information. 
 
-<div class="grid grid-cols-2">
+<div class="grid grid-cols-2 flex items-center">
     <div>
-        <img src={modalv1a}/> 
+        <img class="grid justify-self-center" src={modalv1a}/> 
     </div>
     <div>
         <img src={modalv1b}/> 
@@ -36,8 +36,8 @@ In this version each project only contained a description and goal icon. When se
 ### Version B
 In this version I updated the project details, included a picture as well as a link to the project. When selecting a project, a new window or "modal" was created. This showed a larger version of the image and the description / reflection as a left and right scroll menu.
 
-<div class="grid grid-cols-2">
-    <div>
+<div class="grid grid-cols-2 flex items-center">
+    <div img class="grid justify-self-center">
         <img height="400px" width="400px" src={modalv2a}/> 
     </div>
     <div>
@@ -48,11 +48,23 @@ In this version I updated the project details, included a picture as well as a l
 ### Version C
 In the most recent version I added highlights of <span class="tag-lang">key words</span> to each project. I also created a hover effect (not shown) for each goal. In the modal window I simplified the view to be a downward scroll with a smaller image. I also embedded iframes for content that was available on the web.
 
-<div class="grid grid-cols-2">
-    <div>
+<div class="grid grid-cols-2 flex items-center">
+    <div img class="grid justify-self-center">
         <img height="400px" width="400px" src={modalv3a}/> 
     </div>
     <div>
         <img src={modalv3b}/> 
     </div>
 </div>
+
+<section id="home.goals.expanded">
+
+<blockquote>
+    <ul class='arrow-list-style'>
+    <li>“Speaking the language” of education is important to be able to communicate with educators, curriculum and content designers, and other institutional experts. Their experiences and decisions toward education and learning will influence design and technology decisions. For example, knowing the pedagogy and learning theories that teachers ascribe to is important because they provides important contextual information for the selection and use of educational technologies. Originally, this goal was focused on learning theories specifically. However, through the development of this portfolio I realized the focus was too narrow.</li>
+    <li>The selection of educational technologies, at any scale, require a critical analysis of the user needs in their relevant context. In order to influence the selection of technologies it is important to demonstrate the ability to use and/or create frameworks for such decisions. The selection of technologies should also build upon the educational context, which can be influenced by learning theories.</li>
+    <li>Demonstrating the ability to develop content and to build technologies is part of my last two goals. The development of the portfolio itself will help to demonstrate these competencies. I would like this portfolio to be flexible, and useful beyond the MET program. To ensure this, I have built a dynamic portfolio in a way that is sustainable (for me) and can act as a professional portfolio of more technical work in the future.</li>
+    </ul>
+</blockquote>
+
+</section>
