--- a/src/projects/bringing-it-all.mdx
+++ b/src/projects/bringing-it-all.mdx
@@ -1,14 +1,18 @@
 ---
 title: "Future Directions: After the MET Program"
-date: "2021-12-13"
+date: "2021-12-14"
 quickdetail: "What's next?"
 goals: ["4"]
 ---
 
+<section id="home.goals.expanded">
+
 <blockquote>
-<ul class='arrow-list-style'>
-    <li>I have designed the portfolio to be interactive without too much navigation. Aside from projects that cannot be embedded, most content does not require leaving the site.</li> 
-    <li>The data backend I developed requires a description, reflection, and connection. While there is always room for improvement - I believe the projects are well connected to my goals and intentions.</li>
-    <li>free website tools all start to look the same, and may not work well for a portfolio that is meant to be continually developed</li>
-</ul>
+    <ul class='arrow-list-style'>
+    <li>“Speaking the language” of education is important to be able to communicate with educators, curriculum and content designers, and other institutional experts. Their experiences and decisions toward education and learning will influence design and technology decisions. For example, knowing the pedagogy and learning theories that teachers ascribe to is important because they provides important contextual information for the selection and use of educational technologies. Originally, this goal was focused on learning theories specifically. However, through the development of this portfolio I realized the focus was too narrow.</li>
+    <li>The selection of educational technologies, at any scale, require a critical analysis of the user needs in their relevant context. In order to influence the selection of technologies it is important to demonstrate the ability to use and/or create frameworks for such decisions. The selection of technologies should also build upon the educational context, which can be influenced by learning theories.</li>
+    <li>Demonstrating the ability to develop content and to build technologies is part of my last two goals. The development of the portfolio itself will help to demonstrate these competencies. I would like this portfolio to be flexible, and useful beyond the MET program. To ensure this, I have built a dynamic portfolio in a way that is sustainable (for me) and can act as a professional portfolio of more technical work in the future.</li>
+    </ul>
 </blockquote>
+
+</section>
