--- a/src/projects/building-this-porfolio.mdx
+++ b/src/projects/building-this-porfolio.mdx
@@ -67,3 +67,11 @@ In the final phase, it was time to start writing! As I did though, there were mo
 
 # Concluding Thoughts
 I identified three challenges that I wanted to address with the development of this portfolio: navigation, disjointed projects, and customization. I also felt it was important to build something that wouldn't end up as a static and unchanging portfolio. Ultimately, I think I was able to design a tool to help me solve these problems. 
+
+<blockquote>
+<ul class='arrow-list-style'>
+    <li>I have designed the portfolio to be interactive without too much navigation. Aside from projects that cannot be embedded, most content does not require leaving the site.</li> 
+    <li>The data backend I developed requires a description, reflection, and connection. While there is always room for improvement - I believe the projects are well connected to my goals and intentions.</li>
+    <li>I was able to add unique components to my website that I believe enhance the portfolio, and are uniquely styled.</li>
+</ul>
+</blockquote>
