--- a/src/projects/building-this-porfolio.mdx
+++ b/src/projects/building-this-porfolio.mdx
@@ -54,9 +54,9 @@ Starting to get the look and feel you are going for can be very rewarding. It ca
 It was in this phase that I also started to generate content. My development goal of making connections was coming together in the development and as I reviewed my previous projects. I chose to include some smaller projects to showcase my progression in learning, and to make sure there was a variety - I was happy to recognize that I had quite a few projects that weren't just papers! 
 
 <span> 
-<div className="small-container" style={{float: "left"}}>
-    <img height="400px" width="400px" src={goalhover}/> 
-</div>
+    <div className="p-8" style={{float: "left"}}>
+        <img height="400px" width="350px" src={goalhover}/> 
+    </div>
 </span>
 
 # Phase 3: Bend It
