--- a/src/projects/bringing-it-all-together.mdx
+++ b/src/projects/bringing-it-all-together.mdx
@@ -5,14 +5,65 @@ quickdetail: "What's next?"
 goals: ["4"]
 ---
 
-<section id="home.goals.expanded">
+import tonybates from './tonybates.png'
+import career from './about-career-end.png'
+
+If you are a prospective or current part of the MET program I would highly recommend undertaking ETEC 590. It is a challenging but rewarding experience. I had thought it would be mostly an opportunity to showcase work, but by engaging in the reflective process that was built into the design of the portfolio, I learned much more about myself and my experience in the MET program. 
+
+## Reviewing my Goals
 
 <blockquote>
     <ul class='arrow-list-style'>
-    <li>“Speaking the language” of education is important to be able to communicate with educators, curriculum and content designers, and other institutional experts. Their experiences and decisions toward education and learning will influence design and technology decisions. For example, knowing the pedagogy and learning theories that teachers ascribe to is important because they provides important contextual information for the selection and use of educational technologies. Originally, this goal was focused on learning theories specifically. However, through the development of this portfolio I realized the focus was too narrow.</li>
-    <li>The selection of educational technologies, at any scale, require a critical analysis of the user needs in their relevant context. In order to influence the selection of technologies it is important to demonstrate the ability to use and/or create frameworks for such decisions. The selection of technologies should also build upon the educational context, which can be influenced by learning theories.</li>
-    <li>Demonstrating the ability to develop content and to build technologies is part of my last two goals. The development of the portfolio itself will help to demonstrate these competencies. I would like this portfolio to be flexible, and useful beyond the MET program. To ensure this, I have built a dynamic portfolio in a way that is sustainable (for me) and can act as a professional portfolio of more technical work in the future.</li>
+    <li>“Speaking the language” of education was an important goal - to be able to communicate with educators, curriculum and content designers, and other institutional experts. Their experiences and decisions toward education and learning influence design and technology decisions. For example, knowing the pedagogy and learning theories that teachers ascribe to is important because they provides important contextual information for the selection and use of educational technologies.</li>
     </ul>
 </blockquote>
 
-</section>
+Originally, this goal was focused on learning theories specifically. However, through the development of this portfolio I realized the focus was too narrow and broadened the scope.
+
+<blockquote>
+    <ul class='arrow-list-style'>
+    <li>The selection of educational technologies, at any scale, require a critical analysis of the user needs in their relevant context. In order to influence the selection of technologies it is important to demonstrate the ability to use and/or create frameworks for such decisions. The selection of technologies should also build upon the educational context, which can be influenced by learning and other educational theories.</li>
+    </ul>
+</blockquote>
+
+<div class="grid grid-cols-2 flex items-center pb-4">
+    <div>
+        Through discussions with peers I also recognized the need to be able to critically analyze the ever-growing bodies of information that are associated with educational technologies. I found throughout the MET program that the quick Google searches for information often landed me on a personal or professional blogs. While these blogs can be valuable - they can also be difficult to track back to primary sources, or they become primary information. For example, in a comment from Tony Bates on his blog post (?) article (?) from 2014 <a href='https://www.tonybates.ca/2014/12/10/a-short-history-of-educational-technology/' target='blank'><em>A short history of educational technology</em></a> he asks the audience where they are from, and many respond that it was assigned reading up to the time of writing this in 2021. 
+    </div>
+    <div img class="grid justify-self-center pb-4">
+        <img height="400px" width="400px" src={tonybates}/> 
+    </div>
+</div>
+
+<blockquote>
+    <ul class='arrow-list-style'>
+    <li>Demonstrating the ability to develop content and to build technologies is part of my last two goals. The development of the portfolio itself I believe has demonstrated these competencies. I wanted this portfolio to be flexible, and useful beyond the MET program. To ensure this, I have built a dynamic portfolio in a way that is sustainable (for me) and can act as a professional portfolio of more technical and reflective work in the future.</li>
+    </ul>
+</blockquote>
+
+Did I spend too long building, and not enough time writing? Probably. Did I learn that this might just be my style? Also, probably. In the end of the development of this portfolio I decided that it was best suited to sound "like a blog", rather than a more formal piece of academic work. I believe I showed technical competencies while adapting to the chosen medium and audience. 
+
+## Moving Forward
+
+### This Website
+I will likely drop some of the reflective components that have been included in the portfolio. While I recognize their value in my own learning and growth, they don't have as much of a place in this website as I adapt it to showcase future work. Luckily, to do so, I just have to  `/* comment out */` a few lines of code! 
+
+### Professionally
+
+
+<blockquote width='25%' class='self'>I find myself in the right place at the right time.<p class="text-left py-10"><em>-Me, now</em></p></blockquote> 
+
+
+I will have spent just about half of my time in the MET program in a global pandemic that saw educational institutions catapulted into "catching up" with regards to online education mediums and technology. I have a much more nuanced understanding of the history of educational technology and of the learning theories of the field. I have also expanded my scope of consideration beyond a single classroom and to the level of an institution. I took advantage of opportunities to widen my technology skills, and have now picked up a programming language that has eluded me until now (this website was written using React which is a javascript library). 
+
+<div style={{ minWidth: 300, maxWidth: 750, float: "left"}}>
+    <img src={career} alt="My Career Diagram"/>
+</div>
+
+I often joke that the MET program is a degree I should have had for my current role, and that I have come to my career a bit backwards. I still believe this is true. I have been able to integrate what I have learned throughout the program in my career, and in some cases have developed projects that I can use almost immediately in my role. While I initially thought I was more interested on the "people" side to the right of my diagram, the development of this portfolio has made me reconsider where to focus my attention in the future. Ultimately, I would like to see Learning Analytics evolve at UBC - for this, I think it is the institution and software where the biggest impact can be made. 
+
+
+
+
+
+
