--- a/src/projects/version-control.mdx
+++ b/src/projects/version-control.mdx
@@ -57,3 +57,5 @@ In the most recent version I added highlights of <span class="tag-lang">key word
     </div>
 </div>
 
+## Concluding Thoughts
+"Here's a cool thing, let's use it in an educational setting..." is a sentiment that sometimes described how I saw technology being adopted by educators. Now that I am nearing the end of the MET program - I can more closely relate to the sentiment. Tracking changes in this project and reflecting upon it now has been a challenge and interesting learning experience. I can see how this could have been useful as I drafted papers and created many of the projects that I included. While my projects as wholes represent phases of my learning (in my metaphor, from sketches to outline to colour) - really this progression happened in the development of each project. It would be interesting to have more detailed tracking and documentation of the stages of the project development to review now. What took me a long time? Which revisions were the most impactful? Where did a piece of writing start and where did it end? In the next year I plan to do more reflection and documentation of my professional work, using version control and other tools to see if this can help me refine my ideas and processes. 
